fix text misalignment

--- a/src/app/components/LockButton/LockButton.scss
+++ b/src/app/components/LockButton/LockButton.scss
@@ -32,3 +32,7 @@
   display: flex;
   height: 1rem;
 }
+
+.lock-text {
+  margin-left: 9px;
+}
